@@ -4,17 +4,16 @@ import com.ultreon.devices.block.LaptopBlock;
 import com.ultreon.devices.entity.SeatEntity;
 import com.ultreon.devices.init.DeviceBlockEntities;
 import com.ultreon.devices.util.Colorable;
-import net.fabricmc.api.EnvType;
-import net.fabricmc.api.Environment;
 import net.minecraft.core.BlockPos;
 import net.minecraft.nbt.CompoundTag;
-import net.minecraft.nbt.Tag;
 import net.minecraft.world.entity.LivingEntity;
-import net.minecraft.world.entity.vehicle.Boat;
 import net.minecraft.world.item.DyeColor;
-import net.minecraft.world.level.block.entity.BlockEntityType;
+import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.storage.ValueInput;
+import net.minecraft.world.level.storage.ValueOutput;
 import net.minecraft.world.phys.AABB;
+import org.jspecify.annotations.NonNull;
 
 import java.util.List;
 
@@ -36,17 +35,15 @@ public class OfficeChairBlockEntity extends SyncBlockEntity implements Colorable
     }
 
     @Override
-    public void load(CompoundTag compound) {
-        super.load(compound);
-        if (compound.contains("color", Tag.TAG_BYTE)) {
-            color = DyeColor.byId(compound.getByte("color"));
-        }
+    protected void loadAdditional(@NonNull ValueInput input) {
+        super.loadAdditional(input);
+        color = DyeColor.byId(input.getByteOr("color", (byte) 0));
     }
 
     @Override
-    public void saveAdditional(CompoundTag compound) {
-        super.saveAdditional(compound);
-        compound.putByte("color", (byte) color.getId());
+    protected void saveAdditional(@NonNull ValueOutput output) {
+        super.saveAdditional(output);
+        output.putByte("color", (byte) color.getId());
     }
 
     @Override
@@ -57,12 +54,14 @@ public class OfficeChairBlockEntity extends SyncBlockEntity implements Colorable
     }
 
     public float getRotation() {
+        Level level = this.level;
+        if (level == null) return 0;
         List<SeatEntity> seats = level.getEntitiesOfClass(SeatEntity.class, new AABB(getBlockPos()));
         if (!seats.isEmpty()) {
-            SeatEntity seat = seats.get(0);
+            SeatEntity seat = seats.getFirst();
             if (seat.getControllingPassenger() != null) {
-                if (seat.getControllingPassenger() instanceof LivingEntity) {
-                    LivingEntity living = (LivingEntity) seat.getControllingPassenger();
+                if (seat.getControllingPassenger() != null) {
+                    LivingEntity living = seat.getControllingPassenger();
                     //living.yHeadRotO = living.yHeadRot;
                     //living.yRotO = living.yHeadRot;
                     living.setYBodyRot(living.yHeadRot);
